Quickfix overflow issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,7 @@
 
 body {
   background: var(--lightbackground);
+  overflow: hidden;
 }
 
 aside {
